// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерится для проданного объявления и не показать время, если объявление о продаже нового авто 1`] = `
<div
  className="CardSold"
>
  <div
    className="CardSold__info"
  >
    <div
      className="CardSold__icon"
    >
      <span
        className="Svg"
        dangerouslySetInnerHTML={
          Object {
            "__html": "svgID",
          }
        }
      />
    </div>
    <div
      className="CardSold__infoCol"
    >
      <div
        className="CardSold__title"
      >
        Этот автомобиль уже продан
      </div>
      <div
        className="CardSold__description"
      >
        Объявление доступно только по прямой ссылке
      </div>
      <div
        className="CardSold__description CardSold__description_mobile"
      >
         
      </div>
    </div>
  </div>
  
</div>
`;

exports[`должен отрендерится для проданного объявления и не показать время, если объявление продавалось больше 10 дней 1`] = `
<div
  className="CardSold"
>
  <div
    className="CardSold__info"
  >
    <div
      className="CardSold__icon"
    >
      <span
        className="Svg"
        dangerouslySetInnerHTML={
          Object {
            "__html": "svgID",
          }
        }
      />
    </div>
    <div
      className="CardSold__infoCol"
    >
      <div
        className="CardSold__title"
      >
        Этот автомобиль уже продан
      </div>
      <div
        className="CardSold__description"
      >
        Объявление доступно только по прямой ссылке
      </div>
      <div
        className="CardSold__description CardSold__description_mobile"
      >
         
      </div>
    </div>
  </div>
  
</div>
`;

exports[`должен отрендерится для проданного объявления и показать время, если объявление продавалось меньше 10 дней 1`] = `
<div
  className="CardSold"
>
  <div
    className="CardSold__info"
  >
    <div
      className="CardSold__icon"
    >
      <span
        className="Svg"
        dangerouslySetInnerHTML={
          Object {
            "__html": "svgID",
          }
        }
      />
    </div>
    <div
      className="CardSold__infoCol"
    >
      <div
        className="CardSold__title"
      >
        Этот автомобиль уже продан
      </div>
      <div
        className="CardSold__description"
      >
        Объявление доступно только по прямой ссылке
      </div>
      <div
        className="CardSold__description CardSold__description_mobile"
      >
        3 часа от публикации до продажи
      </div>
    </div>
  </div>
  <div
    className="CardSold__time"
  >
    <div
      className="CardSold__title"
    >
      3 часа
    </div>
    <div
      className="CardSold__description"
    >
      от публикации до продажи
    </div>
  </div>
</div>
`;

exports[`должен учитывать род продаваемого транспорта 1`] = `
<div
  className="CardSold"
>
  <div
    className="CardSold__info"
  >
    <div
      className="CardSold__icon"
    >
      <span
        className="Svg"
        dangerouslySetInnerHTML={
          Object {
            "__html": "svgID",
          }
        }
      />
    </div>
    <div
      className="CardSold__infoCol"
    >
      <div
        className="CardSold__title"
      >
        Эта сельскохозяйственная техника уже продана
      </div>
      <div
        className="CardSold__description"
      >
        Объявление доступно только по прямой ссылке
      </div>
      <div
        className="CardSold__description CardSold__description_mobile"
      >
        3 часа от публикации до продажи
      </div>
    </div>
  </div>
  <div
    className="CardSold__time"
  >
    <div
      className="CardSold__title"
    >
      3 часа
    </div>
    <div
      className="CardSold__description"
    >
      от публикации до продажи
    </div>
  </div>
</div>
`;

exports[`не должен рендерится для активного объявления 1`] = `null`;

exports[`не должен рендерится для владельца 1`] = `null`;
